--- a/src/app/pages/footer/footer.component.html
+++ b/src/app/pages/footer/footer.component.html
@@ -1,13 +1,12 @@
 <footer class="footer">
     <div class="footer-list">
     <div class="footer-logo">
-     Here goes the logo
+        <img src="/assets/logo/vmc-logo.png" width="130" height="50"/>
     </div>
-    <div class="footer-version">
-        This is a version
-    </div>
+
     <div class="footer-copyright">
-        This is a copyright
+        © 2021 Virtual Maths Camp. All rights reserved.
     </div>
     </div>
 </footer>
+
