--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -11,7 +11,7 @@
     <img class="card-image" src="{{'assets/print-cards/' +card.card_value.toLowerCase()+card.card_suit.charAt(0).toLowerCase()+'.png'}}"/>
   
   
-    <div >   
+    <div class="main_version_statements">   
   <div *ngIf="card.card_suit === 'diamond' || card.card_suit === 'club'">
      <!--Puzzles and Counting-->
      <button mat-raised-button color="primary" (click)="showHint()">{{showHintContent?"Hide Hint": "Show Hint to Answer"}}</button>
@@ -168,6 +168,16 @@
 
   </section>
   <section class="feedback">
+    <mat-expansion-panel>
+      <mat-expansion-panel-header>
+        <mat-panel-title>
+          Feedback?
+        </mat-panel-title>
+        <mat-panel-description>
+          Click here to leave us a message!
+          <mat-icon>contact_support</mat-icon>
+        </mat-panel-description>
+      </mat-expansion-panel-header>
     <div>
       Share feedback
      <form (ngSubmit)="onSubmit()" >
@@ -175,40 +185,49 @@
         <tr>
           <td>
             <div>
-              <label for="name">
-                Name
-              </label>
-              <input id="name" name="name" type="text" [(ngModel)]="feedback.name">
+              <mat-form-field appearance="outline">
+                <mat-label>Name</mat-label>
+                <input matInput placeholder="Insert your name" id="name" name="name" type="text" [(ngModel)]="feedback.name">
+                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-hint>Name</mat-hint>
+              </mat-form-field>
+            </div>
+          </td>
+        </tr>
+        
+        <tr>
+          <td>
+            <div>
+              <mat-form-field appearance="outline">
+                <mat-label>Country</mat-label>
+                <input matInput placeholder="Country" id="country" name="country" type="text" [(ngModel)]="feedback.country">
+                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-hint>Country</mat-hint>
+              </mat-form-field>
             </div>
           </td>
         </tr>
         <tr>
           <td>
             <div>
-              <label for="country">
-                Country
-              </label>
-              <input id="country" name="country" type="text" [(ngModel)]="feedback.country">
+              <mat-form-field appearance="outline">
+                <mat-label>Email</mat-label>
+                <input matInput placeholder="Insert your email" id="email" name="email" type="text" [(ngModel)]="feedback.email">
+                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-hint>Email</mat-hint>
+              </mat-form-field>
             </div>
           </td>
         </tr>
         <tr>
           <td>
             <div>
-              <label for="email">
-                Email
-              </label>
-              <input id="email" name="email" type="email" [(ngModel)]="feedback.email">
-            </div>
-          </td>
-        </tr>
-        <tr>
-          <td>
-            <div>
-              <label for="feedback">
-                Feedback
-              </label>
-              <input id="feedback" name="feedback" type="text" [(ngModel)]="feedback.feedback">
+              <mat-form-field appearance="outline">
+                <mat-label>Feedback</mat-label>
+                <input matInput placeholder="Enter your feedback" id="feedback" name="feedback" type="text" [(ngModel)]="feedback.feedback">
+                <mat-icon matSuffix>sentiment_very_satisfied</mat-icon>
+                <mat-hint>Feedback</mat-hint>
+              </mat-form-field>
             </div>
           </td>
         </tr>
@@ -230,5 +249,7 @@
        </p>
    </form>
     </div>
+  </mat-expansion-panel>
+
   </section>
 </section>
