--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -171,6 +171,7 @@
               References
             </mat-card-subtitle>
             <span *ngFor="let reference of card.additional_information.references">
+              <a [href]="reference"></a>
               <p [innerHTML]="reference"></p>
             </span>
           </mat-card>
