hide extension2 if not available

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -150,7 +150,7 @@
         
        
         </mat-card>
-        <button mat-raised-button color="primary" (click)="showExtension2()">Go to Extension 2</button>
+        <button *ngIf="card.extension_2" mat-raised-button color="primary" (click)="showExtension2()">Go to Extension 2</button>
         <button mat-raised-button color="primary" (click)="showMain()" >Back to main statement</button>
 
       </div>
