Added extra field on the feedback form to take suit numbers

--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -336,6 +336,17 @@
               </div>
             </td>
           </tr>
+          <tr>
+            <td>
+              <div hidden="true">
+                <label for="cardtitle">
+                Card Suit            
+              </label>
+                <input id="suit" name="suit" type="text">
+                {{feedback.suit}}
+              </div>
+            </td>
+          </tr>
         </table>
       
          <p>
