set up switcher to change languages with coresponding URLs

--- a/src/app/components/language-switcher/language-switcher.component.html
+++ b/src/app/components/language-switcher/language-switcher.component.html
@@ -1,12 +1,13 @@
 <mat-form-field style="max-width: 100px">
     <mat-select
-        [value]=""
+        [value]="languageService.activeLanguage$ | async"
+        (selectionChange)="selectionChanged($event)"
     >
       <mat-option
-        *ngFor="let languageCode of languages"
+        *ngFor="let languageCode of languagesCodes"
         [value]="languageCode"
       >
-        {{languageCode }}
+        {{languageLabels[languageCode] }}
       </mat-option>
     </mat-select>
   </mat-form-field>
