--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -158,7 +158,7 @@
             <mat-card-subtitle> Statement:</mat-card-subtitle>
           <p [innerHTML]="card.extension_2.statement"></p>
           </span>
-          <button mat-raised-button color="primary" (click)="extension2Hint()">{{showExtension2Hint?"Hide Hint": "Show Hint to Answer"}}</button>
+          <button *ngIf="card.extension_1.hint" mat-raised-button color="primary" (click)="extension2Hint()">{{showExtension2Hint?"Hide Hint": "Show Hint to Answer"}}</button>
           <div *ngIf="showExtension2Hint">
           <span class="ext_2_hint" *ngIf="card.extension_2.hint">
             <mat-card-subtitle> Hint:</mat-card-subtitle>
