--- a/src/app/components/cards.component.scss
+++ b/src/app/components/cards.component.scss
@@ -274,7 +274,7 @@ div p {
 .Table_Handshakes_image_0{
   width: 50%;
 }
-.Pieces_of_Cake_image_0.png{
+.Pieces_of_Cake_image_0{
   width: 50%;
 }
 .Table_Handshakes_image_1{
